# trust_minimized_did_agent

./: CLAUDE_DESKTOP.md  README.md  toolhost.js
receipt_verifier/: Cargo.toml  README.md
receipt_verifier/src/: lib.rs  main.rs
scripts/: README.md  TODO.md  auto_prove.py  host.py  proof.json  public.json  witness.json
scripts/receipts/: rcpt_1765770035_97f27be7.json  rcpt_1765770249_cded8205.json  rcpt_1765770251_be9f8e85.json  rcpt_1765770252_2670a5d3.json  rcpt_1765770269_10d31f2c.json  rcpt_1765770444_94af0666.json  rcpt_1765770455_7390c9a6.json  rcpt_1765770513_99485310.json  rcpt_1765770562_9bf678da.json  rcpt_1765771731_4481b175.json  rcpt_1765772410_12c3f396.json  rcpt_1765772510_da4fa571.json  rcpt_1765773158_4b663825.json  rcpt_1765774313_ecabbf2d.json  rcpt_1765774660_a7c344bf.json  rcpt_1765777779_9e9efbeb.json  rcpt_1765777791_faf5b6cc.json  rcpt_1765778272_0cbf2a85.json
