[package]
name = "receipt_verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
sha2 = "0.10"
tiny-keccak = { version = "2", features = ["keccak"] }
hex = "0.4"
thiserror = "1"
anyhow = "1"
k256 = { version = "0.13", features = ["ecdsa"] }

[[bin]]
name = "receipt_verifier"
path = "src/main.rs"

[[bin]]
name = "receipt_prover"
path = "src/bin/receipt_prover.rs"
